--- a/main.css
+++ b/main.css
@@ -1,293 +1,93 @@
-body{
-    height: 100vh;
-    width: 100vw;
-    background: #2A7B9B;
-    background: linear-gradient(166deg,rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 52%);
+body {
+  width: 100vw;
+  height: 100vh;
+  background-color: aquamarine;
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+  overflow: hidden;
 }
 
 #page {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-}
-
-#itens{
   display: flex;
+  flex-direction: row;
+  align-items: center;
   height: 100%;
+  width: 58%;
 }
 
-#info {
-    display: flex;
-    flex-direction: column;
-    z-index: -1;
-    pointer-events: none
+#menu_options section.options input.menu_input {
+  display: none;
 }
-
-#info .info_head{
-    margin: 25px;
-    font-size: 45px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-#info .info_head span{
-    color:rgba(87, 199, 133, 1);
-}
-
-#info article{
-    font-size: 18px;
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 15px;
-    text-align: justify;
-}
-
-#info article span{
-   font-weight: bold;
-}
-
-#info article p {
-    font-size: 18px;
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 10px;
-}
-
-#header_perfil{
-    height: 380px;
-}
-
-#itens.perfil_container{
-    display: flex;
-    height: 100%;
-    flex-direction: column;
-    align-items: center;
-    margin: 0 0 0 40px;
-
-}
-
-#info main.about{
-    overflow-y: scroll;
-    scrollbar-width: thin;
-    height: inhe;
-}
-
-#tecnologies_title{
-    margin: 0 0 0 25px;
-    font-size: 25px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-#tecnologies_title span{
-    font-size: 25px;
-    color:rgba(87, 199, 133, 1);
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-#tecnologies{
-    display: flex;
-    flex-direction: row;
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    align-items: center;
-    justify-content: center;
-   
-}
-#tecnologies .exp_container{
-    display: flex;
-    flex-direction: column;
-    margin-left: 15px;
-    margin-top: 15px;
-    align-items: center;
-    justify-content: center;
-}
-
-#tecnologies .exp_container p{
-
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-#tecnologies img{
-   height: 100px;
-   width: 100px;
-}
-.perfil_menu{
-    box-shadow: 0px 0px 25px black;
-}
-
-#perfil_footer{
-    display: flex;
-    align-items: center;
-    
-}
-
-#perfil_footer a{
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    text-decoration: none;
-    color: black;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-#perfil_footer img{
-   height: 35px;
-   margin: 15px;
-}
-
-#perfil_footer{
-    display: flex;
-    align-items: center;
-    width: 480px;
-    height: 75px;
-    justify-content: center;
-    background-color: white;
-}
-
-#perfil {
-    width: 480px;
-    height: 460px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    
-    background-color: white;
-}
-
-#itens.menu_bar{
-    display: flex;
-    height: 100%;
-    align-items: center;
-}
-
-#perfil .perfil_text{
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 5px;
-}
-
-#perfil #name_perfil{
-   font-size: 35px;
-}
-
-#perfil #job_perfil{
-    font-size: 25px;
-    color:rgba(87, 199, 133, 1);
-}
-
-#links_perfil .links_container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin: 5px;
-    text-decoration: none;
-    color: black;
-}
-
-#links_perfil{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 5px;
-}
-
-#perfil #git_hub_perfil img{
-    height: 45px;
-    width: 45px;
-}
-
-#perfil #git_hub_perfil p{
-    font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-}
- 
-#perfil #linkedin_perfil img{
-    height: 45px;
-    width: 45px;
- }
- 
- #perfil #linkedin_perfil p{
-     font-size: 15px;
-     font-family: Arial, Helvetica, sans-serif;
- }
-
-#menu{
-    position: relative;
-    width: 120px;
-    height: 350px;
-    display: flex;
-    margin: 0 0 0 25px;
-    justify-content: center;
-    flex-direction: column;
-    background-color: white;
-    padding: 5px ;
-}
-
-#menu input.menu_itens[type="radio"] {
-    display: none;
-}
-
-#menu .menu_text {
-    padding: 10px;
-    height: 100%;
-
-    cursor: pointer;
-    
-    display: flex;
-    flex-direction: column;
-    transition: all 0.3s;
-    justify-content: center;
-
-    text-align: center;
-    align-items: center;
-
-    font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bolder;
-}
-
-#menu #info{
-    position: absolute;
-    max-width: 680px;
-    min-width: 480px;
-    height: 680px;
-    left: 650px;
-    background: white;
-    display:none;
-}
-
-#menu .menu_text.about::before {
-    content: url("./assests/person_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg");
-}
-
-#menu .menu_text.exp::before {
-    content: url("./assests/experiment_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg");
-}
-
-#menu .menu_text.edu::before {
-    content: url("./assests/local_library_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg");
-}
-
-#menu .menu_text.cert::before {
-    content: url("./assests/workspace_premium_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg");  
-}
-
-#menu input.menu_itens[type="radio"]:checked + label.menu_text::before {
-    filter: invert(1);
-}
-
-#menu input.menu_itens[type="radio"]:checked + label.menu_text {
-    background-color: white;
-    color: black;
-}
-
-#menu input.menu_itens[type="radio"]:checked + label.menu_text {
-    color: white;
-    background-color:#57C785;
-}
-
-
-#menu input.menu_itens[type="radio"]:checked + label.menu_text + #info {
+#menu_options section.options article.board {
   display: flex;
+  position: absolute;
+  right: 0;
+  top: 8vh;
+  width: 42%;
+  height: 82%;
+  background-color: whitesmoke;
 }
+#menu_options section.options label.label_box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#profile {
+  background-color: whitesmoke;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 32%;
+}
+
+#links_perfil {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+#links_perfil img {
+  width: 45px;
+  height: 45px;
+}
+#links_perfil a {
+  text-decoration: none;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 15px 0 0;
+}
+
+@media (min-width: 1081px) {
+  body {
+    justify-content: center;
+    align-items: center;
+  }
+  #profile {
+    height: 32vh;
+    width: 58%;
+  }
+  #page {
+    position: relative;
+    justify-content: left;
+    background-color: green;
+    height: 82vh;
+    width: 68%;
+  }
+  #menu_options section.options article.board {
+    position: absolute;
+    right: 0;
+    top: 8%;
+    width: 42%;
+    height: 82%;
+  }
+}
+
+/*# sourceMappingURL=main.css.map */
