--- a/main.css
+++ b/main.css
@@ -32,7 +32,6 @@ body {
   background-color: whitesmoke;
 }
 #menu li.options {
-  display: flex;
   width: 95px;
   height: 45px;
   display: flex;
@@ -43,16 +42,44 @@ body {
 #menu li.options:hover {
   background-color: #57C785;
 }
-#menu li.options:hover label.option_container {
+#menu li.options:hover label.option_box {
   color: whitesmoke;
 }
-#menu li.options:hover label.option_container img.logo {
+#menu li.options:hover label.option_box img.logo {
   filter: brightness(0) invert(1) sepia(1) saturate(0) hue-rotate(0deg);
+}
+#menu li.options label.option_box {
+  display: flex;
+  flex-direction: ro;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 #menu li.options input.option {
   display: none;
 }
-#menu li.options label.option_container {
+#menu li.options input.option:checked + label.option_box::before {
+  filter: invert(1);
+}
+#menu li.options input.option:checked + label.box_content {
+  background-color: white;
+  color: black;
+}
+#menu li.options input.option:checked + label.box_content {
+  color: white;
+  background-color: #57C785;
+}
+#menu li.options input.option:checked + label.box_content img.logo {
+  filter: brightness(0) invert(1) sepia(1) saturate(0) hue-rotate(0deg);
+}
+#menu li.options input.option:checked ~ section.board {
+  display: flex;
+}
+#menu li.options input.option:not(:checked) ~ section.board {
+  display: none;
+}
+#menu li.options label.option_box {
   display: flex;
   flex-direction: column;
   justify-content: center;
