--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,6 +1,52 @@
 @use "./board" as mixin;
 
 
+@mixin checked(){
+
+    & label.option_box{
+        display: flex;
+        flex-direction: ro;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+    }
+
+     & input.option{
+
+        display: none;
+        
+        &:checked + label.option_box::before {
+            filter: invert(1);
+        }
+
+        &:checked + label.box_content {
+            background-color: white;
+            color: black;
+        }
+
+        &:checked + label.box_content {
+            color: white;
+           
+            
+            & img.logo{
+                filter: brightness(0) invert(1) sepia(1) saturate(0) hue-rotate(0deg);
+            }
+        
+            background-color:#57C785;
+        }
+
+        &:checked ~ section.board {
+            display: flex;
+        }
+
+        &:not(:checked) ~ section.board {
+            display: none;
+        }
+    }
+}
+
+
 #menu{
 
     display: flex;
@@ -16,14 +62,17 @@
     
     & li.options{
 
-        display: flex;
-
         width: 95px;
         height: 45px;
 
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
         &:hover{
             background-color:  #57C785;
-            & label.option_container{
+            & label.option_box{
                 color: whitesmoke;
                 & img.logo{
                     filter: brightness(0) invert(1) sepia(1) saturate(0) hue-rotate(0deg);
@@ -32,16 +81,11 @@
             }
         }
 
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
 
-        & input.option{
-            display: none;
-        }
+        @include checked();
 
-        & label.option_container{
+       
+        & label.option_box{
             display: flex;
             flex-direction: column;
             justify-content: center;
