--- a/scss/_board.scss
+++ b/scss/_board.scss
@@ -54,6 +54,28 @@
             }
         }
 
+        main.list_exps, main.list_certs{
+            & ul.exps, ul.certs{
+                & li.exp, li.cert{
+                    margin: 10px 0 0 0;
+                     & span.title{
+                        display: flex;
+                        flex-direction: row;
+                    
+                        color: color.adjust(black, $lightness: 45%);
+                        font-size: 24px;
+                        & p{
+                            color:black;
+                        }
+                    }
+
+                    & p.date{
+                        font-weight: bolder;
+                    }
+                }
+            }
+        }
+
         & header, footer{
             & span.title{
                 display: flex;
