--- a/main.css
+++ b/main.css
@@ -41,7 +41,7 @@ body {
 }
 #menu li.options label.option_box {
   display: flex;
-  flex-direction: ro;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -121,20 +121,34 @@ body {
   width: 45px;
   height: 45px;
 }
-#menu li.options section.board main.list_exps ul.exps li.exp, #menu li.options section.board main.list_exps ul.exps li.cert, #menu li.options section.board main.list_exps ul.certs li.exp, #menu li.options section.board main.list_exps ul.certs li.cert, #menu li.options section.board main.list_certs ul.exps li.exp, #menu li.options section.board main.list_certs ul.exps li.cert, #menu li.options section.board main.list_certs ul.certs li.exp, #menu li.options section.board main.list_certs ul.certs li.cert {
+#menu li.options section.board #list_exps ul.exps li.exp, #menu li.options section.board #list_exps ul.exps li.cert, #menu li.options section.board #list_exps ul.certs li.exp, #menu li.options section.board #list_exps ul.certs li.cert, #menu li.options section.board #list_certs ul.exps li.exp, #menu li.options section.board #list_certs ul.exps li.cert, #menu li.options section.board #list_certs ul.certs li.exp, #menu li.options section.board #list_certs ul.certs li.cert {
   margin: 10px 0 0 0;
 }
-#menu li.options section.board main.list_exps ul.exps li.exp span.title, #menu li.options section.board main.list_exps ul.exps li.cert span.title, #menu li.options section.board main.list_exps ul.certs li.exp span.title, #menu li.options section.board main.list_exps ul.certs li.cert span.title, #menu li.options section.board main.list_certs ul.exps li.exp span.title, #menu li.options section.board main.list_certs ul.exps li.cert span.title, #menu li.options section.board main.list_certs ul.certs li.exp span.title, #menu li.options section.board main.list_certs ul.certs li.cert span.title {
+#menu li.options section.board #list_exps ul.exps li.exp span.title, #menu li.options section.board #list_exps ul.exps li.cert span.title, #menu li.options section.board #list_exps ul.certs li.exp span.title, #menu li.options section.board #list_exps ul.certs li.cert span.title, #menu li.options section.board #list_certs ul.exps li.exp span.title, #menu li.options section.board #list_certs ul.exps li.cert span.title, #menu li.options section.board #list_certs ul.certs li.exp span.title, #menu li.options section.board #list_certs ul.certs li.cert span.title {
   display: flex;
   flex-direction: row;
   color: rgb(114.75, 114.75, 114.75);
   font-size: 24px;
 }
-#menu li.options section.board main.list_exps ul.exps li.exp span.title p, #menu li.options section.board main.list_exps ul.exps li.cert span.title p, #menu li.options section.board main.list_exps ul.certs li.exp span.title p, #menu li.options section.board main.list_exps ul.certs li.cert span.title p, #menu li.options section.board main.list_certs ul.exps li.exp span.title p, #menu li.options section.board main.list_certs ul.exps li.cert span.title p, #menu li.options section.board main.list_certs ul.certs li.exp span.title p, #menu li.options section.board main.list_certs ul.certs li.cert span.title p {
+#menu li.options section.board #list_exps ul.exps li.exp span.title p, #menu li.options section.board #list_exps ul.exps li.cert span.title p, #menu li.options section.board #list_exps ul.certs li.exp span.title p, #menu li.options section.board #list_exps ul.certs li.cert span.title p, #menu li.options section.board #list_certs ul.exps li.exp span.title p, #menu li.options section.board #list_certs ul.exps li.cert span.title p, #menu li.options section.board #list_certs ul.certs li.exp span.title p, #menu li.options section.board #list_certs ul.certs li.cert span.title p {
   color: black;
 }
-#menu li.options section.board main.list_exps ul.exps li.exp p.date, #menu li.options section.board main.list_exps ul.exps li.cert p.date, #menu li.options section.board main.list_exps ul.certs li.exp p.date, #menu li.options section.board main.list_exps ul.certs li.cert p.date, #menu li.options section.board main.list_certs ul.exps li.exp p.date, #menu li.options section.board main.list_certs ul.exps li.cert p.date, #menu li.options section.board main.list_certs ul.certs li.exp p.date, #menu li.options section.board main.list_certs ul.certs li.cert p.date {
+#menu li.options section.board #list_exps ul.exps li.exp p.date, #menu li.options section.board #list_exps ul.exps li.cert p.date, #menu li.options section.board #list_exps ul.certs li.exp p.date, #menu li.options section.board #list_exps ul.certs li.cert p.date, #menu li.options section.board #list_certs ul.exps li.exp p.date, #menu li.options section.board #list_certs ul.exps li.cert p.date, #menu li.options section.board #list_certs ul.certs li.exp p.date, #menu li.options section.board #list_certs ul.certs li.cert p.date {
   font-weight: bolder;
+}
+#menu li.options section.board #list_certs ul.certs li.cert ul.cert_items {
+  margin-top: 15px;
+}
+#menu li.options section.board #list_certs ul.certs li.cert ul.cert_items li.cert_item {
+  display: flex;
+  flex-direction: column;
+  margin: 0 0 10px 0;
+}
+#menu li.options section.board #list_certs ul.certs li.cert ul.cert_items li.cert_item label, #menu li.options section.board #list_certs ul.certs li.cert ul.cert_items li.cert_item p, #menu li.options section.board #list_certs ul.certs li.cert ul.cert_items li.cert_item span {
+  margin: auto;
+}
+#menu li.options section.board #list_certs ul.certs li.cert ul.cert_items li.cert_item span {
+  font-weight: bold;
 }
 #menu li.options section.board header span.title, #menu li.options section.board footer span.title {
   display: flex;
@@ -212,6 +226,33 @@ body {
     right: 190px;
     width: 42%;
     height: 82%;
+  }
+}
+@media (max-width: 600px) {
+  body {
+    justify-content: center;
+    overflow-y: scroll;
+  }
+  #page {
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: start;
+  }
+  #name_perfil {
+    font-size: 24px;
+  }
+  #job_perfil {
+    font-size: 20px;
+    margin-bottom: 15px;
+  }
+  #menu {
+    flex-direction: row;
+  }
+  #menu li.options section.board {
+    top: 46.2%;
+    right: 0;
+    width: 100%;
+    height: 100%;
   }
 }
 
