--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -5,7 +5,7 @@
 
     & label.option_box{
         display: flex;
-        flex-direction: ro;
+        flex-direction: row;
         justify-content: center;
         align-items: center;
         width: 100%;
@@ -69,9 +69,6 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-
-       
-
 
         @include checked();
 
