--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,5 +1,8 @@
 @use "./board" as mixin;
 
+
+
+
 @media (max-width: 600px) { 
 
     body{
@@ -30,3 +33,17 @@
          }
     }
 }
+
+
+@media (max-width: 415px) { 
+
+    #name_perfil{
+        font-size: 16px;
+    }
+
+    #job_perfil{
+        font-size: 12px;
+        margin-bottom: 15px;
+    }
+}
+
