bolder font profile name

--- a/main.css
+++ b/main.css
@@ -267,10 +267,12 @@ body {
 @media (max-width: 425px) {
   #name_perfil {
     font-size: 16px;
+    font-weight: bolder;
   }
   #job_perfil {
     font-size: 12px;
     margin-bottom: 15px;
+    font-weight: bold;
   }
 }
 
