--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -39,11 +39,13 @@
 
     #name_perfil{
         font-size: 16px;
+        font-weight: bolder;
     }
 
     #job_perfil{
         font-size: 12px;
         margin-bottom: 15px;
+        font-weight: bold;
     }
 }
 
